testing and render update
