# utility/authenticate.js
@@ -1,5 +1,8 @@
+const Games = require('../models/gameModel') 
+const crypto = require('crypto')
+
 const isAuthenticated = (req, res, next) => {
-    console.log("Authenticating...");
+    console.log("Authenticating Account Logged In...");
     if (req.session.user === undefined){
         return res.status(401).json("Access Denied");
     } else {
@@ -9,11 +12,21 @@ const isAuthenticated = (req, res, next) => {
 };
 
 const isAdmin = (req, res, next) => {
-    console.log("Authenticating...");
-    if (req.session.user === undefined || !req.session.user.isAdmin){
+    console.log("Authenticating Admin...");
+    if (req.session.user === undefined || !Boolean(req.session.user.isAdmin)){
+        console.log(req.session.user);
         return res.status(401).json("Access Denied");
     }
     next();
 };
 
-module.exports = {isAuthenticated, isAdmin};
+const apiCheck = async (req, res, gameId) => {
+  const game = await Games.findOne(gameId);
+  const providedKey = req.headers['x-api-key'];
+  const hashedKey = crypto.createHash("sha256").update(providedKey).digest("hex");
+
+  if (!game) return null;
+  if (game[0].apiKey != hashedKey) return false;
+};
+
+module.exports = {isAuthenticated, isAdmin, apiCheck};
